Add custom camera
Inject into the CameraModule and override the fast flag for removing the camera API. Then add our custom code for setting the camera spin and up vector.

--- a/default.project.json
+++ b/default.project.json
@@ -2,20 +2,9 @@
 	"name": "Rbx-Wallstick",
 	"tree": {
 		"$className": "DataModel",
-		"ReplicatedStorage": {
-			"$className": "ReplicatedStorage",
-			"$path": "src/ReplicatedStorage"
-		},
 		"ServerScriptService": {
-			"$className": "ReplicatedStorage",
+			"$className": "ServerScriptService",
 			"$path": "src/ServerScriptService"
-		},
-		"StarterPlayer": {
-			"$className": "StarterPlayer",
-			"StarterPlayerScripts": {
-				"$className": "StarterPlayerScripts",
-				"$path": "src/StarterPlayerScripts"
-			}
-		},
+		}
 	}
 }
