Add basic wallstick
This commit is still notably missing animations and server replication

--- a/default.project.json
+++ b/default.project.json
@@ -5,6 +5,13 @@
 		"ServerScriptService": {
 			"$className": "ServerScriptService",
 			"$path": "src/ServerScriptService"
+		},
+		"StarterPlayer": {
+			"$className": "StarterPlayer",
+			"StarterPlayerScripts": {
+				"$className": "StarterPlayerScripts",
+				"$path": "src/StarterPlayerScripts"
+			}
 		}
 	}
 }
